Fix notebook for reference data generation

--- a/notebooks/generate-ref-data.ipynb
+++ b/notebooks/generate-ref-data.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys, os\n",
     "sys.path.append(\"..\")\n",
-    "sys.path.insert(0, os.path.expanduser(\"~/projects/bpack\"))"
+    "# sys.path.insert(0, os.path.expanduser(\"~/projects/bpack\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,9 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 's1isp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/antonio/projects/s1isp/notebooks/generate-ref-data.ipynb Cell 4\u001b[0m in \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/antonio/projects/s1isp/notebooks/generate-ref-data.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39ms1isp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/antonio/projects/s1isp/notebooks/generate-ref-data.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39ms1isp\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mudf\u001b[39;00m \u001b[39mimport\u001b[39;00m decode_ud\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/antonio/projects/s1isp/notebooks/generate-ref-data.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39ms1isp\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39menums\u001b[39;00m \u001b[39mimport\u001b[39;00m ESignalType\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 's1isp'"
+     ]
+    }
+   ],
    "source": [
     "import s1isp\n",
     "from s1isp.udf import decode_ud\n",
@@ -97,7 +109,7 @@
     "    bpack.EBaseUnits.BYTES,\n",
     ")\n",
     "\n",
-    "sizes = [PRIMARY_HEADER_SIZE + ph.packet_data_length + 1 for ph, _ in records]\n",
+    "sizes = [PRIMARY_HEADER_SIZE + ph.packet_data_length + 1 for ph, *_ in records]\n",
     "offsets = list(itertools.accumulate([0] + sizes))"
    ]
   },
@@ -145,7 +157,7 @@
    "source": [
     "with open(raw_file, \"rb\") as fd:\n",
     "    for target in targets:\n",
-    "        ph, sh = records[target.packet_count]\n",
+    "        ph, sh, _ = records[target.packet_count]\n",
     "        assert sh.counters_service.space_packet_count == target.packet_count\n",
     "        assert sh.radar_configuration_support_service.ses_sbb_message.signal_type in target.signal_types\n",
     "\n",
