New enums.py module

--- a/notebooks/generate-ref-data.ipynb
+++ b/notebooks/generate-ref-data.ipynb
@@ -53,8 +53,9 @@
    "source": [
     "import s1isp\n",
     "from s1isp.udf import decode_ud\n",
+    "from s1isp.enums import ESesSignalType\n",
     "from s1isp.decoder import decode_stream\n",
-    "from s1isp.descriptors import ESesSignalType, PacketPrimaryHeader, PacketSecondaryHeader"
+    "from s1isp.descriptors import PacketPrimaryHeader, PacketSecondaryHeader"
    ]
   },
   {
