Remove unnecessary Sas/Ses prefixes from enums

--- a/notebooks/generate-ref-data.ipynb
+++ b/notebooks/generate-ref-data.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "import s1isp\n",
     "from s1isp.udf import decode_ud\n",
-    "from s1isp.enums import ESesSignalType\n",
+    "from s1isp.enums import ESignalType\n",
     "from s1isp.decoder import decode_stream\n",
     "from s1isp.descriptors import PacketPrimaryHeader, PacketSecondaryHeader"
    ]
@@ -92,7 +92,7 @@
     "class Target(NamedTuple):\n",
     "    packet_count: int\n",
     "    label: str\n",
-    "    signal_types: Set[ESesSignalType]"
+    "    signal_types: Set[ESignalType]"
    ]
   },
   {
@@ -144,9 +144,9 @@
    "outputs": [],
    "source": [
     "targets = [\n",
-    "    Target(packet_count=0, label=\"noise\", signal_types={ESesSignalType.noise}),\n",
-    "    Target(packet_count=8, label=\"txcal\", signal_types={ESesSignalType.tx_cal}),\n",
-    "    Target(packet_count=408, label=\"echo\", signal_types={ESesSignalType.echo}),\n",
+    "    Target(packet_count=0, label=\"noise\", signal_types={ESignalType.noise}),\n",
+    "    Target(packet_count=8, label=\"txcal\", signal_types={ESignalType.tx_cal}),\n",
+    "    Target(packet_count=408, label=\"echo\", signal_types={ESignalType.echo}),\n",
     "]"
    ]
   },
