New PHSIZE and SHSIZE constants

--- a/notebooks/generate-ref-data.ipynb
+++ b/notebooks/generate-ref-data.ipynb
@@ -55,6 +55,10 @@
     "from s1isp.udf import decode_ud\n",
     "from s1isp.enums import ESignalType\n",
     "from s1isp.decoder import decode_stream\n",
+    "from s1isp.constants import (\n",
+    "    PRIMARY_HEADER_SIZE as PHSIZE,\n",
+    "    SECONDARY_HEADER_SIZE as SHSIZE,\n",
+    ")\n",
     "from s1isp.descriptors import PacketPrimaryHeader, PacketSecondaryHeader"
    ]
   },
@@ -101,16 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PRIMARY_HEADER_SIZE = bpack.calcsize(\n",
-    "    PacketPrimaryHeader,\n",
-    "    bpack.EBaseUnits.BYTES,\n",
-    ")\n",
-    "SECONDARY_HEADER_SIZE = bpack.calcsize(\n",
-    "    PacketSecondaryHeader,\n",
-    "    bpack.EBaseUnits.BYTES,\n",
-    ")\n",
-    "\n",
-    "sizes = [PRIMARY_HEADER_SIZE + ph.packet_data_length + 1 for ph, *_ in records]\n",
+    "sizes = [PHSIZE + ph.packet_data_length + 1 for ph, *_ in records]\n",
     "offsets = list(itertools.accumulate([0] + sizes))"
    ]
   },
@@ -170,7 +165,7 @@
     "        tstmod = sh.fixed_ancillary_data_service.test_mode\n",
     "        nq = sh.radar_sample_count_service.number_of_quads\n",
     "        baqmod = sh.radar_configuration_support_service.baq_mode\n",
-    "        bindata = isp_data[PRIMARY_HEADER_SIZE + SECONDARY_HEADER_SIZE:]\n",
+    "        bindata = isp_data[PHSIZE + SHSIZE:]\n",
     "        data = decode_ud(bindata, nq, baqmod, tstmod)\n",
     "\n",
     "        filename = f\"{target.packet_count:06d}-{target.label}.dat\"\n",
