--- a/notebooks/generate-ref-data.ipynb
+++ b/notebooks/generate-ref-data.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys, os\n",
-    "sys.path.append(\"..\")\n",
-    "# sys.path.insert(0, os.path.expanduser(\"~/projects/bpack\"))"
+    "import sys\n",
+    "sys.path.append(\"..\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,31 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bpack\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 's1isp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/antonio/projects/s1isp/notebooks/generate-ref-data.ipynb Cell 4\u001b[0m in \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/antonio/projects/s1isp/notebooks/generate-ref-data.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39ms1isp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/antonio/projects/s1isp/notebooks/generate-ref-data.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39ms1isp\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mudf\u001b[39;00m \u001b[39mimport\u001b[39;00m decode_ud\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/antonio/projects/s1isp/notebooks/generate-ref-data.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39ms1isp\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39menums\u001b[39;00m \u001b[39mimport\u001b[39;00m ESignalType\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 's1isp'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import s1isp\n",
     "from s1isp.udf import decode_ud\n",
@@ -59,7 +45,7 @@
     "    PRIMARY_HEADER_SIZE as PHSIZE,\n",
     "    SECONDARY_HEADER_SIZE as SHSIZE,\n",
     ")\n",
-    "from s1isp.descriptors import PacketPrimaryHeader, PacketSecondaryHeader"
+    "from s1isp.descriptors import PrimaryHeader, SecondaryHeader"
    ]
   },
   {
@@ -154,17 +140,17 @@
     "with open(raw_file, \"rb\") as fd:\n",
     "    for target in targets:\n",
     "        ph, sh, _ = records[target.packet_count]\n",
-    "        assert sh.counters_service.space_packet_count == target.packet_count\n",
-    "        assert sh.radar_configuration_support_service.ses_sbb_message.signal_type in target.signal_types\n",
+    "        assert sh.counters.space_packet_count == target.packet_count\n",
+    "        assert sh.radar_configuration_support.ses.signal_type in target.signal_types\n",
     "\n",
     "        offset = offsets[target.packet_count]\n",
     "        size = sizes[target.packet_count]\n",
     "        fd.seek(offset)\n",
     "        isp_data = fd.read(size)\n",
     "\n",
-    "        tstmod = sh.fixed_ancillary_data_service.test_mode\n",
-    "        nq = sh.radar_sample_count_service.number_of_quads\n",
-    "        baqmod = sh.radar_configuration_support_service.baq_mode\n",
+    "        tstmod = sh.fixed_ancillary_data.test_mode\n",
+    "        nq = sh.radar_sample_count.number_of_quads\n",
+    "        baqmod = sh.radar_configuration_support.baq_mode\n",
     "        bindata = isp_data[PHSIZE + SHSIZE:]\n",
     "        data = decode_ud(bindata, nq, baqmod, tstmod)\n",
     "\n",
