--- a/notebooks/simple-decoding-example.ipynb
+++ b/notebooks/simple-decoding-example.ipynb
@@ -36,7 +36,8 @@
    "source": [
     "import s1isp\n",
     "import s1isp.decoder\n",
-    "from s1isp.decoder import EUdfDecodingMode"
+    "from s1isp.decoder import EUdfDecodingMode\n",
+    "from s1isp.decoder import decoded_subcomm_to_dict"
    ]
   },
   {
@@ -77,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Records can be easily converted int Pandas DataFrames"
+    "### Headers Records can be easily converted into Pandas DataFrames"
    ]
   },
   {
@@ -92,6 +93,24 @@
     "df = pd.DataFrame(headers_data)\n",
     "\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subcommuted Ancillary Data conversion into Pandas Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subcom_data_decoded = s1isp.decoder.SubCommutatedDataDecoder().decode(subcom_data)\n",
+    "subcom_data_decoded_dict = decoded_subcomm_to_dict(subcom_decoded=subcom_data_decoded)\n",
+    "subcom_data_decoded_df = pd.DataFrame(subcom_data_decoded_dict)"
    ]
   },
   {
