Update rederence test data

--- a/notebooks/generate-ref-data.ipynb
+++ b/notebooks/generate-ref-data.ipynb
@@ -125,9 +125,9 @@
    "outputs": [],
    "source": [
     "targets = [\n",
-    "    Target(packet_count=0, label=\"noise\", signal_types={ESignalType.noise}),\n",
-    "    Target(packet_count=8, label=\"txcal\", signal_types={ESignalType.tx_cal}),\n",
-    "    Target(packet_count=408, label=\"echo\", signal_types={ESignalType.echo}),\n",
+    "    Target(packet_count=0, label=\"noise\", signal_types={ESignalType.NOISE}),\n",
+    "    Target(packet_count=8, label=\"txcal\", signal_types={ESignalType.TX_CAL}),\n",
+    "    Target(packet_count=408, label=\"echo\", signal_types={ESignalType.ECHO}),\n",
     "]"
    ]
   },
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
