New notebook for sub-commutated data decoding

--- a/notebooks/generate-ref-data.ipynb
+++ b/notebooks/generate-ref-data.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "import pathlib\n",
     "import itertools\n",
     "from typing import NamedTuple, Set\n",
@@ -165,6 +166,17 @@
     "            np.savez(filename, primary_header=ph, secondary_header=sh, udf=refdata, decoded_udf=data)\n",
     "        else:\n",
     "            np.savez(filename, primary_header=ph, secondary_header=sh, udf=data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"subcom-data.pkl\"\n",
+    "with open(filename, \"wb\") as fd:\n",
+    "    pickle.dump(subcomm_data_records, fd)"
    ]
   }
  ],
