--- a/notebooks/simple-decoding-example.ipynb
+++ b/notebooks/simple-decoding-example.ipynb
@@ -108,9 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subcom_data_decoded = s1isp.decoder.SubCommutatedDataDecoder().decode(subcom_data)\n",
-    "subcom_data_decoded_dict = decoded_subcomm_to_dict(subcom_decoded=subcom_data_decoded)\n",
-    "subcom_data_decoded_df = pd.DataFrame(subcom_data_decoded_dict)"
+    "subcom_data_records_decoded = s1isp.decoder.SubCommutatedDataDecoder().decode(subcom_data)\n",
+    "subcom_data_records_decoded_dict = decoded_subcomm_to_dict(subcom_decoded=subcom_data_decoded)\n",
+    "subcom_data_records_decoded_df = pd.DataFrame(subcom_data_decoded_dict)",
+    "print(subcom_data_records_decoded_df)",
    ]
   },
   {
