--- a/notebooks/simple-decoding-example.ipynb
+++ b/notebooks/simple-decoding-example.ipynb
@@ -108,10 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subcom_data_records_decoded = s1isp.decoder.SubCommutatedDataDecoder().decode(subcom_data)\n",
-    "subcom_data_records_decoded_dict = decoded_subcomm_to_dict(subcom_decoded=subcom_data_decoded)\n",
-    "subcom_data_records_decoded_df = pd.DataFrame(subcom_data_decoded_dict)",
-    "print(subcom_data_records_decoded_df)",
+    "subcom_data_decoded = s1isp.decoder.SubCommutatedDataDecoder().decode(subcom_data_records)\n",
+    "subcom_data_decoded_dict = decoded_subcomm_to_dict(subcom_decoded=subcom_data_decoded)\n",
+    "subcom_data_decoded_df = pd.DataFrame(subcom_data_decoded_dict)\n",
+    "subcom_data_decoded_df"
    ]
   },
   {
@@ -198,13 +198,6 @@
     "ax.grid()\n",
     "ax.set_title(label);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -223,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
