Formatting and linting

--- a/notebooks/generate-ref-data.ipynb
+++ b/notebooks/generate-ref-data.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.append(\"..\")"
    ]
   },
@@ -19,7 +20,7 @@
     "import pickle\n",
     "import pathlib\n",
     "import itertools\n",
-    "from typing import NamedTuple, Set\n",
+    "from typing import NamedTuple\n",
     "from xml.etree import ElementTree as etree"
    ]
   },
@@ -45,8 +46,7 @@
     "from s1isp.constants import (\n",
     "    PRIMARY_HEADER_SIZE as PHSIZE,\n",
     "    SECONDARY_HEADER_SIZE as SHSIZE,\n",
-    ")\n",
-    "from s1isp.descriptors import PrimaryHeader, SecondaryHeader"
+    ")"
    ]
   },
   {
@@ -57,12 +57,27 @@
    "source": [
     "DATADIR = pathlib.Path(s1isp.__file__).parent.parent.joinpath(\"data\").resolve()\n",
     "\n",
-    "raw_product = DATADIR / \"S1B_S3_RAW__0SDV_20200615T162409_20200615T162435_022046_029D76_F3E6.SAFE\"\n",
-    "raw_file = raw_product / \"s1b-s3-raw-s-vv-20200615t162409-20200615t162435-022046-029d76.dat\"\n",
+    "raw_product = (\n",
+    "    DATADIR\n",
+    "    / \"S1B_S3_RAW__0SDV_20200615T162409_20200615T162435_022046_029D76_F3E6.SAFE\"\n",
+    ")\n",
+    "raw_file = (\n",
+    "    raw_product\n",
+    "    / \"s1b-s3-raw-s-vv-20200615t162409-20200615t162435-022046-029d76.dat\"\n",
+    ")\n",
     "\n",
-    "ref_product = DATADIR / \"S1B_S3_RAW__0SDV_20200615T162409_20200615T162435_022046_029D76_F3E6.TIFF\"\n",
-    "ref_file = ref_product / \"S1B_S3_RAW__0SDV_20200615T162409_20200615T162435_022046_029D76_F3E6.TIFF_0003\"\n",
-    "ref_header_file = ref_product / \"S1B_S3_RAW__0SDV_20200615T162409_20200615T162435_022046_029D76_F3E6.TIFF_0003.xml\""
+    "ref_product = (\n",
+    "    DATADIR\n",
+    "    / \"S1B_S3_RAW__0SDV_20200615T162409_20200615T162435_022046_029D76_F3E6.TIFF\"\n",
+    ")\n",
+    "ref_file = (\n",
+    "    ref_product\n",
+    "    / \"S1B_S3_RAW__0SDV_20200615T162409_20200615T162435_022046_029D76_F3E6.TIFF_0003\"\n",
+    ")\n",
+    "ref_header_file = (\n",
+    "    ref_product\n",
+    "    / \"S1B_S3_RAW__0SDV_20200615T162409_20200615T162435_022046_029D76_F3E6.TIFF_0003.xml\"\n",
+    ")"
    ]
   },
   {
@@ -83,7 +98,7 @@
     "class Target(NamedTuple):\n",
     "    packet_count: int\n",
     "    label: str\n",
-    "    signal_types: Set[ESignalType]"
+    "    signal_types: set[ESignalType]"
    ]
   },
   {
@@ -102,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_ref_data(headerfile, datafile, row, dtype=np.dtype(\"complex64\")):\n",
+    "def read_ref_data(headerfile, datafile, row, dtype=np.complex64):\n",
     "    xmldoc = etree.parse(headerfile)\n",
     "\n",
     "    samples = int(xmldoc.findtext(\"./Channel/RasterInfo/Samples\"))\n",
@@ -112,7 +127,7 @@
     "    with open(datafile, \"rb\") as fd:\n",
     "        fd.seek(row * linesize)\n",
     "        rawdata = fd.read(linesize)\n",
-    "    \n",
+    "\n",
     "    header = rawdata[:rowprefix]\n",
     "    data = np.frombuffer(rawdata[rowprefix:], dtype=dtype)\n",
     "\n",
@@ -142,7 +157,10 @@
     "    for target in targets:\n",
     "        ph, sh, _ = records[target.packet_count]\n",
     "        assert sh.counters.space_packet_count == target.packet_count\n",
-    "        assert sh.radar_configuration_support.ses.signal_type in target.signal_types\n",
+    "        assert (\n",
+    "            sh.radar_configuration_support.ses.signal_type\n",
+    "            in target.signal_types\n",
+    "        )\n",
     "\n",
     "        offset = offsets[target.packet_count]\n",
     "        size = sizes[target.packet_count]\n",
@@ -152,7 +170,7 @@
     "        tstmod = sh.fixed_ancillary_data.test_mode\n",
     "        nq = sh.radar_sample_count.number_of_quads\n",
     "        baqmod = sh.radar_configuration_support.baq_mode\n",
-    "        bindata = isp_data[PHSIZE + SHSIZE:]\n",
+    "        bindata = isp_data[PHSIZE + SHSIZE :]\n",
     "        data = decode_ud(bindata, nq, baqmod, tstmod)\n",
     "\n",
     "        filename = f\"{target.packet_count:06d}-{target.label}.dat\"\n",
@@ -162,10 +180,20 @@
     "        filename = f\"{target.packet_count:06d}-{target.label}.npz\"\n",
     "        if target.label == \"echo\":\n",
     "            packet_offset = 408\n",
-    "            _, refdata = read_ref_data(ref_header_file, ref_file, target.packet_count - packet_offset)\n",
-    "            np.savez(filename, primary_header=ph, secondary_header=sh, udf=refdata, decoded_udf=data)\n",
+    "            _, refdata = read_ref_data(\n",
+    "                ref_header_file, ref_file, target.packet_count - packet_offset\n",
+    "            )\n",
+    "            np.savez(\n",
+    "                filename,\n",
+    "                primary_header=ph,\n",
+    "                secondary_header=sh,\n",
+    "                udf=refdata,\n",
+    "                decoded_udf=data,\n",
+    "            )\n",
     "        else:\n",
-    "            np.savez(filename, primary_header=ph, secondary_header=sh, udf=data)"
+    "            np.savez(\n",
+    "                filename, primary_header=ph, secondary_header=sh, udf=data\n",
+    "            )"
    ]
   },
   {
