--- a/notebooks/make-flat-descriptor.ipynb
+++ b/notebooks/make-flat-descriptor.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.append(\"..\")"
    ]
   },
@@ -17,6 +18,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "sys.path.insert(0, os.path.expanduser(\"~/projects/bpack\"))"
    ]
   },
@@ -40,18 +42,16 @@
     "code_generator = FlatDescriptorCodeGenerator(SecondaryHeader)\n",
     "code_generator.imports[\"s1isp.descriptors\"].discard(\"REF_FREQ\")\n",
     "code_generator.imports[\"s1isp.constants\"].update([\"REF_FREQ\", \"SYNC_MARKER\"])\n",
-    "code_generator.imports[\"s1isp.descriptors\"].update(\n",
-    "    [\n",
-    "        \"DatationService\",\n",
-    "        \"FixedAncillaryDataService\",\n",
-    "        \"SubCommutatedAncillaryDataService\",\n",
-    "        \"CountersService\",\n",
-    "        \"SasData\",\n",
-    "        \"SesData\",\n",
-    "        \"RadarConfigurationSupportService\",\n",
-    "        \"RadarSampleCountService\",\n",
-    "    ]\n",
-    ")\n",
+    "code_generator.imports[\"s1isp.descriptors\"].update([\n",
+    "    \"DatationService\",\n",
+    "    \"FixedAncillaryDataService\",\n",
+    "    \"SubCommutatedAncillaryDataService\",\n",
+    "    \"CountersService\",\n",
+    "    \"SasData\",\n",
+    "    \"SesData\",\n",
+    "    \"RadarConfigurationSupportService\",\n",
+    "    \"RadarSampleCountService\",\n",
+    "])\n",
     "code_generator.module_docstring = (\n",
     "    \"Flat version of the Sentinel-1 ISP SecondaryHeader.\"\n",
     ")\n",
@@ -183,7 +183,8 @@
     "    PRIMARY_HEADER_SIZE as PHSIZE,\n",
     "    SECONDARY_HEADER_SIZE as SHSIZE,\n",
     ")\n",
-    "data = data[PHSIZE:PHSIZE+SHSIZE]"
+    "\n",
+    "data = data[PHSIZE : PHSIZE + SHSIZE]"
    ]
   },
   {
@@ -201,7 +202,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "fsh = FlatSecondaryHeader.frombytes(data)"
    ]
   },
@@ -266,7 +266,10 @@
     "assert sh.fixed_ancillary_data.ecc_num == fsh.ecc_num\n",
     "assert sh.fixed_ancillary_data.test_mode == fsh.test_mode\n",
     "assert sh.fixed_ancillary_data.rx_channel_id == fsh.rx_channel_id\n",
-    "assert sh.fixed_ancillary_data.instrument_configuration_id == fsh.instrument_configuration_id"
+    "assert (\n",
+    "    sh.fixed_ancillary_data.instrument_configuration_id\n",
+    "    == fsh.instrument_configuration_id\n",
+    ")"
    ]
   },
   {
@@ -301,7 +304,10 @@
     "assert sh.radar_configuration_support.range_decimation == fsh.range_decimation\n",
     "assert sh.radar_configuration_support.rx_gain == fsh.rx_gain\n",
     "assert sh.radar_configuration_support.tx_ramp_rate == fsh.tx_ramp_rate\n",
-    "assert sh.radar_configuration_support.tx_pulse_start_freq == fsh.tx_pulse_start_freq\n",
+    "assert (\n",
+    "    sh.radar_configuration_support.tx_pulse_start_freq\n",
+    "    == fsh.tx_pulse_start_freq\n",
+    ")\n",
     "assert sh.radar_configuration_support.tx_pulse_length == fsh.tx_pulse_length\n",
     "assert sh.radar_configuration_support.rank == fsh.rank\n",
     "assert sh.radar_configuration_support.pri == fsh.pri\n",
@@ -317,7 +323,10 @@
    "source": [
     "assert sh.radar_configuration_support.sas.ssb_flag == fsh.ssb_flag\n",
     "assert sh.radar_configuration_support.sas.polarization == fsh.polarization\n",
-    "assert sh.radar_configuration_support.sas.temperature_compensation == fsh.temperature_compensation\n",
+    "assert (\n",
+    "    sh.radar_configuration_support.sas.temperature_compensation\n",
+    "    == fsh.temperature_compensation\n",
+    ")\n",
     "assert sh.radar_configuration_support.sas._dynamic_data == fsh._dynamic_data\n",
     "assert sh.radar_configuration_support.sas._beam_address == fsh._beam_address"
    ]
@@ -329,7 +338,9 @@
    "outputs": [],
    "source": [
     "assert sh.radar_configuration_support.ses.cal_mode == fsh.cal_mode\n",
-    "assert sh.radar_configuration_support.ses.tx_pulse_number == fsh.tx_pulse_number\n",
+    "assert (\n",
+    "    sh.radar_configuration_support.ses.tx_pulse_number == fsh.tx_pulse_number\n",
+    ")\n",
     "assert sh.radar_configuration_support.ses.signal_type == fsh.signal_type\n",
     "assert sh.radar_configuration_support.ses.swap == fsh.swap\n",
     "assert sh.radar_configuration_support.ses.swath_number == fsh.swath_number"
