--- a/notebooks/sentinal1decoder-reconstruction.ipynb
+++ b/notebooks/sentinal1decoder-reconstruction.ipynb
@@ -20,77 +20,22 @@
     "    \"\"\"\n",
     "\n",
     "    # Table for simple reconstruction method, pg 78\n",
-    "    b0 = [\n",
-    "        3.0,\n",
-    "        3.0,\n",
-    "        3.16,\n",
-    "        3.53\n",
-    "    ]\n",
+    "    b0 = [3.0, 3.0, 3.16, 3.53]\n",
     "\n",
-    "    b1 = [\n",
-    "        4.0,\n",
-    "        4.0,\n",
-    "        4.08,\n",
-    "        4.37\n",
-    "    ]\n",
+    "    b1 = [4.0, 4.0, 4.08, 4.37]\n",
     "\n",
-    "    b2 = [\n",
-    "        6.0,\n",
-    "        6.0,\n",
-    "        6.0,\n",
-    "        6.15,\n",
-    "        6.5,\n",
-    "        6.88\n",
-    "    ]\n",
+    "    b2 = [6.0, 6.0, 6.0, 6.15, 6.5, 6.88]\n",
     "\n",
-    "    b3 = [\n",
-    "        9.0,\n",
-    "        9.0,\n",
-    "        9.0,\n",
-    "        9.0,\n",
-    "        9.36,\n",
-    "        9.50,\n",
-    "        10.1\n",
-    "    ]\n",
+    "    b3 = [9.0, 9.0, 9.0, 9.0, 9.36, 9.50, 10.1]\n",
     "\n",
-    "    b4 = [\n",
-    "        15.0,\n",
-    "        15.0,\n",
-    "        15.0,\n",
-    "        15.0,\n",
-    "        15.0,\n",
-    "        15.0,\n",
-    "        15.22,\n",
-    "        15.50,\n",
-    "        16.05\n",
-    "    ]\n",
-    "\n",
+    "    b4 = [15.0, 15.0, 15.0, 15.0, 15.0, 15.0, 15.22, 15.50, 16.05]\n",
     "\n",
     "    # Table of normalized reconstruction levels, pg 79\n",
-    "    nrl_b0 = [\n",
-    "        0.3637,\n",
-    "        1.0915,\n",
-    "        1.8208,\n",
-    "        2.6406\n",
-    "    ]\n",
+    "    nrl_b0 = [0.3637, 1.0915, 1.8208, 2.6406]\n",
     "\n",
-    "    nrl_b1 = [\n",
-    "        0.3042,\n",
-    "        0.9127,\n",
-    "        1.5216,\n",
-    "        2.1313,\n",
-    "        2.8426\n",
-    "    ]\n",
+    "    nrl_b1 = [0.3042, 0.9127, 1.5216, 2.1313, 2.8426]\n",
     "\n",
-    "    nrl_b2 = [\n",
-    "        0.2305,\n",
-    "        0.6916,\n",
-    "        1.1528,\n",
-    "        1.6140,\n",
-    "        2.0754,\n",
-    "        2.5369,\n",
-    "        3.1191\n",
-    "    ]\n",
+    "    nrl_b2 = [0.2305, 0.6916, 1.1528, 1.6140, 2.0754, 2.5369, 3.1191]\n",
     "\n",
     "    nrl_b3 = [\n",
     "        0.1702,\n",
@@ -102,7 +47,7 @@
     "        2.2131,\n",
     "        2.5536,\n",
     "        2.8942,\n",
-    "        3.3744\n",
+    "        3.3744,\n",
     "    ]\n",
     "\n",
     "    nrl_b4 = [\n",
@@ -121,13 +66,12 @@
     "        2.8244,\n",
     "        3.0504,\n",
     "        3.2764,\n",
-    "        3.6623\n",
+    "        3.6623,\n",
     "    ]\n",
-    "\n",
     "\n",
     "    # Table of sigma values\n",
     "    sf = [\n",
-    "        0.,\n",
+    "        0.0,\n",
     "        0.630,\n",
     "        1.250,\n",
     "        1.880,\n",
@@ -202,7 +146,7 @@
     "        45.120,\n",
     "        45.750,\n",
     "        46.370,\n",
-    "        47.,\n",
+    "        47.0,\n",
     "        47.630,\n",
     "        48.250,\n",
     "        48.880,\n",
@@ -231,7 +175,7 @@
     "        64.240,\n",
     "        65.490,\n",
     "        66.740,\n",
-    "        68.,\n",
+    "        68.0,\n",
     "        69.250,\n",
     "        70.50,\n",
     "        71.760,\n",
@@ -382,11 +326,12 @@
     "        253.490,\n",
     "        254.740,\n",
     "        255.990,\n",
-    "        255.990\n",
+    "        255.990,\n",
     "    ]\n",
     "\n",
     "    # lookup\n",
     "    from types import SimpleNamespace\n",
+    "\n",
     "    lookup = SimpleNamespace(\n",
     "        b0=b0,\n",
     "        b1=b1,\n",
@@ -422,46 +367,66 @@
     "    if brc == 0:\n",
     "        if thidx <= 3:\n",
     "            if s_code.get_mcode < 3:\n",
-    "                return (-1)**s_code.get_sign * s_code.get_mcode\n",
+    "                return (-1) ** s_code.get_sign * s_code.get_mcode\n",
     "            elif s_code.get_mcode == 3:\n",
-    "                return (-1)**s_code.get_sign * lookup.b0[thidx]\n",
+    "                return (-1) ** s_code.get_sign * lookup.b0[thidx]\n",
     "        else:\n",
-    "            return (-1)**s_code.get_sign * lookup.nrl_b0[s_code.get_mcode] * lookup.sf[thidx]\n",
+    "            return (\n",
+    "                (-1) ** s_code.get_sign\n",
+    "                * lookup.nrl_b0[s_code.get_mcode]\n",
+    "                * lookup.sf[thidx]\n",
+    "            )\n",
     "    elif brc == 1:\n",
     "        if thidx <= 3:\n",
     "            if s_code.get_mcode < 4:\n",
-    "                return (-1)**s_code.get_sign * s_code.get_mcode\n",
+    "                return (-1) ** s_code.get_sign * s_code.get_mcode\n",
     "            elif s_code.get_mcode == 4:\n",
-    "                return (-1)**s_code.get_sign * lookup.b1[thidx]\n",
+    "                return (-1) ** s_code.get_sign * lookup.b1[thidx]\n",
     "        else:\n",
-    "            return (-1)**s_code.get_sign * lookup.nrl_b1[s_code.get_mcode] * lookup.sf[thidx]\n",
+    "            return (\n",
+    "                (-1) ** s_code.get_sign\n",
+    "                * lookup.nrl_b1[s_code.get_mcode]\n",
+    "                * lookup.sf[thidx]\n",
+    "            )\n",
     "    elif brc == 2:\n",
     "        if thidx <= 5:\n",
     "            if s_code.get_mcode < 6:\n",
-    "                return (-1)**s_code.get_sign * s_code.get_mcode\n",
+    "                return (-1) ** s_code.get_sign * s_code.get_mcode\n",
     "            elif s_code.get_mcode == 6:\n",
-    "                return (-1)**s_code.get_sign * lookup.b2[thidx]\n",
+    "                return (-1) ** s_code.get_sign * lookup.b2[thidx]\n",
     "        else:\n",
-    "            return (-1)**s_code.get_sign * lookup.nrl_b2[s_code.get_mcode] * lookup.sf[thidx]\n",
+    "            return (\n",
+    "                (-1) ** s_code.get_sign\n",
+    "                * lookup.nrl_b2[s_code.get_mcode]\n",
+    "                * lookup.sf[thidx]\n",
+    "            )\n",
     "    elif brc == 3:\n",
     "        if thidx <= 6:\n",
     "            if s_code.get_mcode < 9:\n",
-    "                return (-1)**s_code.get_sign * s_code.get_mcode\n",
+    "                return (-1) ** s_code.get_sign * s_code.get_mcode\n",
     "            elif s_code.get_mcode == 9:\n",
-    "                return (-1)**s_code.get_sign * lookup.b3[thidx]\n",
+    "                return (-1) ** s_code.get_sign * lookup.b3[thidx]\n",
     "        else:\n",
-    "            return (-1)**s_code.get_sign * lookup.nrl_b3[s_code.get_mcode] * lookup.sf[thidx]\n",
+    "            return (\n",
+    "                (-1) ** s_code.get_sign\n",
+    "                * lookup.nrl_b3[s_code.get_mcode]\n",
+    "                * lookup.sf[thidx]\n",
+    "            )\n",
     "    elif brc == 4:\n",
     "        if thidx <= 8:\n",
     "            if s_code.get_mcode < 15:\n",
-    "                return (-1)**s_code.get_sign * s_code.get_mcode\n",
+    "                return (-1) ** s_code.get_sign * s_code.get_mcode\n",
     "            elif s_code.get_mcode == 15:\n",
-    "                return (-1)**s_code.get_sign * lookup.b4[thidx]\n",
+    "                return (-1) ** s_code.get_sign * lookup.b4[thidx]\n",
     "        else:\n",
-    "            return (-1)**s_code.get_sign * lookup.nrl_b4[s_code.get_mcode] * lookup.sf[thidx]\n",
+    "            return (\n",
+    "                (-1) ** s_code.get_sign\n",
+    "                * lookup.nrl_b4[s_code.get_mcode]\n",
+    "                * lookup.sf[thidx]\n",
+    "            )\n",
     "\n",
     "    raise ValueError(\n",
-    "        f\"Unhandled reconstruction case: \"\n",
+    "        \"Unhandled reconstruction case: \"\n",
     "        f\"sign={s_code.get_sign}, mcode={s_code.get_mcode}, \"\n",
     "        f\"brc={brc}, thidx={thidx}\"\n",
     "    )"
@@ -516,7 +481,6 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "\n",
     "\n",
     "filename = \"reconstruction-lut.json\"\n",
     "with open(filename, \"w\") as fd:\n",
