--- a/notebooks/simple-decoding-example.ipynb
+++ b/notebooks/simple-decoding-example.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.append(\"..\")"
    ]
   },
@@ -108,8 +109,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subcom_data_decoded = s1isp.decoder.SubCommutatedDataDecoder().decode(subcom_data_records)\n",
-    "subcom_data_decoded_dict = decoded_subcomm_to_dict(subcom_decoded=subcom_data_decoded)\n",
+    "subcom_data_decoded = s1isp.decoder.SubCommutatedDataDecoder().decode(\n",
+    "    subcom_data_records\n",
+    ")\n",
+    "subcom_data_decoded_dict = decoded_subcomm_to_dict(\n",
+    "    subcom_decoded=subcom_data_decoded\n",
+    ")\n",
     "subcom_data_decoded_df = pd.DataFrame(subcom_data_decoded_dict)\n",
     "subcom_data_decoded_df"
    ]
@@ -133,7 +138,7 @@
     "\n",
     "# tx-cal\n",
     "idx = 8\n",
-    "label = \"Tx cal\" \n",
+    "label = \"Tx cal\"\n",
     "\n",
     "# echo\n",
     "# idx = 500\n",
@@ -146,7 +151,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "df.signal_type[idx]"
    ]
   },
