--- a/notebooks/subcom-data-decoding.ipynb
+++ b/notebooks/subcom-data-decoding.ipynb
@@ -17,6 +17,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.append(\"..\")"
    ]
   },
@@ -117,7 +118,9 @@
    "outputs": [],
    "source": [
     "incomplete_cycle_data = {\n",
-    "    idx: item for idx, item in enumerate(decoder._cycle_data) if not item.is_complete()\n",
+    "    idx: item\n",
+    "    for idx, item in enumerate(decoder._cycle_data)\n",
+    "    if not item.is_complete()\n",
     "}"
    ]
   },
@@ -180,15 +183,15 @@
    "source": [
     "fig, ax = plt.subplots(3, sharex=True, figsize=[15, 6])\n",
     "\n",
-    "ax[0].plot(t, p[0, :], label='x')\n",
+    "ax[0].plot(t, p[0, :], label=\"x\")\n",
     "ax[0].grid()\n",
     "ax[0].set_ylabel(\"x [m]\")\n",
     "\n",
-    "ax[1].plot(t, p[1, :], label='y')\n",
+    "ax[1].plot(t, p[1, :], label=\"y\")\n",
     "ax[1].grid()\n",
     "ax[1].set_ylabel(\"y [m]\")\n",
     "\n",
-    "ax[2].plot(t, p[2, :], label='z')\n",
+    "ax[2].plot(t, p[2, :], label=\"z\")\n",
     "ax[2].grid()\n",
     "ax[2].set_ylabel(\"z [m]\")\n",
     "ax[2].set_xlabel(\"t [s]\");"
